Started specification file. Improved debugging, robot simulator, meta-programming commands

--- a/documentation/specification/first.tex
+++ b/documentation/specification/first.tex
@@ -41,8 +41,8 @@ R. K\authorsc{ENT} D\authorsc{YBVIG}, M\authorsc{ATTHEW} F\authorsc{LATT},
 \multicolumn{3}{c}{\textit{(Editors, Revised$^{\mathit{6}}$ Report on the Algorithmic Language Scheme)}} \\
 \end{tabular}
 $$
-\vskip 2ex
-{\it Dedicated to the memory of John McCarthy and Daniel Weinreb}
+%\vskip 2ex
+%{\it Dedicated to the memory of John McCarthy and Daniel Weinreb}
 \vskip 2.6ex
 {\large \bf \today}             % *** DRAFT ***
 \end{center}
