Book draft 100% done.

--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -4,3 +4,19 @@
   year={1966},
   publisher={Houghton Mifflin}
 }
+
+@book{lancaster1986curve,
+  title={Curve and surface fitting: an introduction},
+  author={Lancaster, Peter and Salkauskas, Kestutis},
+  year={1986},
+  publisher={Academic press}
+}
+
+@inproceedings{miller2000cartesian,
+  title={Cartesian genetic programming},
+  author={Miller, Julian F and Thomson, Peter},
+  booktitle={European Conference on Genetic Programming},
+  pages={121--132},
+  year={2000},
+  organization={Springer}
+}
